<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, CalendarActivity!</string>
    <string name="app_name">Calendar</string>
    <string name="jan">Jan</string>
    <string name="feb">Feb</string>
    <string name="mar">Mar</string>
    <string name="apr">Apr</string>
    <string name="may">May</string>
    <string name="jun">Jun</string>
    <string name="jul">Jul</string>
    <string name="aug">Aug</string>
    <string name="sep">Sep</string>
    <string name="oct">Oct</string>
    <string name="nov">Nov</string>
    <string name="dec">Dec</string>
    <string name="day">Day</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="notes">Notes</string>
    <string name="schedule">Schedule</string>

</resources>